--- a/assets/main.css
+++ b/assets/main.css
@@ -269,7 +269,6 @@ body.is-instant:after {
 	background-color: #FFFFFF;
 	border-color: rgba(118,116,140,0.212);
 	border-style: solid;
-	border-width: 1px;
 }
 
 #columns01 > .wrapper > .inner {
@@ -322,6 +321,21 @@ body.is-instant:after {
 	margin-left: calc(var(--gutters) * -1);
 }
 
+#columns01.columns > .wrapper > .inner > *:before {
+	border-left: solid 1px rgba(118,116,140,0.212);
+	content: '';
+	display: block;
+	margin-left: calc((var(--gutters) * -0.5) - 0.5px);
+	position: absolute;
+	width: 0;
+	height: calc(100% - (var(--padding-vertical) * 2));
+	top: var(--padding-vertical);
+}
+
+#columns01.columns > .wrapper > .inner > *:first-child:before {
+	display: none;
+}
+
 #columns01.default > .wrapper > .inner > .full {
 	margin-left: calc(var(--padding-horizontal) * -1);
 	max-width: none !important;
@@ -341,18 +355,18 @@ body.is-instant:after {
 }
 
 #columns01.columns > .wrapper > .inner > div > .full {
-	margin-left: calc(var(--gutters) * -0.5);
+	margin-left: calc((var(--gutters) * -0.5) + 0.5px);
 	max-width: none !important;
-	width: calc(100% + var(--gutters) + 0.4725px);
+	width: calc(100% + var(--gutters) + 0.4725px - 1px);
 }
 
 #columns01.columns > .wrapper > .inner > div:first-child > .full {
 	margin-left: calc(var(--padding-horizontal) * -1);
-	width: calc(100% + var(--padding-horizontal) + calc(var(--gutters) * 0.5) + 0.4725px);
+	width: calc(100% + var(--padding-horizontal) + calc(var(--gutters) * 0.5) + 0.4725px - 0.5px);
 }
 
 #columns01.columns > .wrapper > .inner > div:last-child > .full {
-	width: calc(100% + var(--padding-horizontal) + calc(var(--gutters) * 0.5) + 0.4725px);
+	width: calc(100% + var(--padding-horizontal) + calc(var(--gutters) * 0.5) + 0.4725px - 0.5px);
 }
 
 #columns01.columns > .wrapper > .inner > div > .full:first-child {
@@ -683,6 +697,10 @@ h1 span[style], h2 span[style], h3 span[style], p span[style], h1 strong, h2 str
 		visibility: hidden;
 	}
 	
+	#columns01.columns > .wrapper > .inner > span:first-child + div:before {
+		display: none !important;
+	}
+	
 	#columns01.columns > .wrapper > .inner > *:first-child {
 		margin-left: 0 !important;
 		padding-top: 0 !important;
@@ -692,8 +710,26 @@ h1 span[style], h2 span[style], h3 span[style], p span[style], h1 strong, h2 str
 		padding: calc(var(--gutters) * 0.5) 0 !important;
 	}
 	
+	#columns01.columns > .wrapper > .inner > *:before {
+		border-top: solid 1px rgba(118,116,140,0.212) !important;
+		height: 0 !important;
+		margin-left: 0 !important;
+		top: auto !important;
+		margin-top: calc((var(--gutters) * -0.5) - 0.5px) !important;
+		left: var(--padding-horizontal) !important;
+		width: calc(100% - (var(--padding-horizontal) * 2)) !important;
+	}
+	
 	#columns01.columns > .wrapper > .inner > *:last-child {
 		padding-bottom: 0 !important;
+	}
+	
+	#columns01.columns > .wrapper > .inner > *:first-child:before {
+		display: none !important;
+	}
+	
+	#columns01.columns > .wrapper > .inner > *:last-child:before {
+		display: block !important;
 	}
 	
 	#columns01.columns > .wrapper > .inner > div > .full {
@@ -712,11 +748,11 @@ h1 span[style], h2 span[style], h3 span[style], p span[style], h1 strong, h2 str
 	}
 	
 	#columns01.columns > .wrapper > .inner > div > .full:first-child {
-		margin-top: calc(var(--gutters) * -0.5) !important;
+		margin-top: calc((var(--gutters) * -0.5) + 0.5px) !important;
 	}
 	
 	#columns01.columns > .wrapper > .inner > div > .full:last-child {
-		margin-bottom: calc(var(--gutters) * -0.5) !important;
+		margin-bottom: calc((var(--gutters) * -0.5) + 0.5px) !important;
 	}
 	
 	#columns01.columns > .wrapper > .inner > div:first-of-type > .full:first-child {
@@ -809,6 +845,10 @@ h1 span[style], h2 span[style], h3 span[style], p span[style], h1 strong, h2 str
 	
 	#columns01.columns > .wrapper > .inner > * {
 		padding: calc(var(--gutters) * 0.5) 0 !important;
+	}
+	
+	#columns01.columns > .wrapper > .inner > *:before {
+		margin-top: calc((var(--gutters) * -0.5) - 0.5px) !important;
 	}
 	
 	#columns01.columns > .wrapper > .inner > .full > .full:first-child:last-child.image img {
